--- a/app/src/main/res/layout/activity_cartpurchase.xml
+++ b/app/src/main/res/layout/activity_cartpurchase.xml
@@ -36,7 +36,7 @@
                 android:layout_width="270dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
-                android:text="Carrito de compras" />
+                android:text="@string/carrito_de_compras" />
 
             <ImageButton
                 android:layout_width="30dp"
@@ -90,7 +90,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
-            android:text="¡Empieza un carrito de compras!"
+            android:text="@string/empieza_un_carrito_de_compras"
             android:textAlignment="center"
             android:textSize="19sp" />
 
@@ -98,7 +98,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:text="Suma productos y consigue envio gratis"
+            android:text="@string/suma_productos_y_consigue_envio_gratis"
             android:textAlignment="center" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -113,7 +113,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:backgroundTint="@color/btndiscover"
-                android:text="Descubrir productos"
+                android:text="@string/descubrir_productos"
                 tools:ignore="MissingConstraints" />
 
             <androidx.constraintlayout.widget.Guideline
@@ -153,7 +153,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="30dp"
             android:layout_marginTop="5dp"
-            android:text="Productos que te interesaron"
+            android:text="@string/productos_que_te_interesaron"
             android:textSize="20sp" />
 
         <androidx.recyclerview.widget.RecyclerView
