--- a/app/src/main/res/layout/activity_directions.xml
+++ b/app/src/main/res/layout/activity_directions.xml
@@ -46,36 +46,36 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <com.google.android.material.textview.MaterialTextView
+    <TextView
         android:id="@+id/textView"
         android:layout_width="350dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:text="Elige dónde recibir tus compras"
+        android:text="@string/elige_d_nde_recibir_tus_compras"
         android:textSize="23sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/navbar" />
 
-    <com.google.android.material.textview.MaterialTextView
+    <TextView
         android:id="@+id/textView2"
         android:textStyle="normal"
         android:layout_width="350dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="13dp"
-        android:text="Podrás ver costos y tiempos de entrga precisos en todo lo que busques."
+        android:text="@string/podr_s_ver_costos_y_tiempos_de_entrga_precisos_en_todo_lo_que_busques"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.508"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
-    <com.google.android.material.textview.MaterialTextView
+    <TextView
         android:id="@+id/textView3"
         android:layout_width="350dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="17dp"
-        android:text="En una de tus direcciones."
+        android:text="@string/en_una_de_tus_direcciones"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -149,11 +149,11 @@
             app:layout_constraintTop_toBottomOf="@+id/circleactive"
             tools:layout_editor_absoluteX="0dp" />
 
-        <com.google.android.material.textview.MaterialTextView
+        <TextView
             android:layout_width="199dp"
             android:layout_height="19dp"
             android:layout_marginStart="26dp"
-            android:text="Editar direcciones"
+            android:text="@string/editar_direcciones"
             android:textColor="@color/btndiscover"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -173,14 +173,14 @@
         app:layout_constraintTop_toBottomOf="@+id/directions"
         tools:layout_editor_absoluteX="0dp" />
 
-    <com.google.android.material.textview.MaterialTextView
+    <TextView
         android:id="@+id/titleubi"
         android:layout_width="200dp"
         android:textSize="16sp"
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
         android:layout_marginTop="13dp"
-        android:text="En otra ubicación"
+        android:text="@string/en_otra_ubicaci_n"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout8" />
@@ -221,11 +221,11 @@
             android:gravity="center"
             android:layout_width="300dp"
             android:layout_height="50dp">
-            <com.google.android.material.textview.MaterialTextView
+            <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textColor="@color/btndiscover"
-                android:text="Ingresa un codigo postal"/>
+                android:text="@string/ingresa_un_codigo_postal"/>
         </LinearLayout>
     </LinearLayout>
     <LinearLayout
@@ -257,7 +257,7 @@
                 android:layout_width="370dp"
                 android:layout_height="wrap_content"
                 android:backgroundTint="@color/btndiscover"
-                android:text="Aceptar"
+                android:text="@string/aceptar"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 tools:ignore="MissingConstraints" />
