--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -75,7 +75,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="5dp"
                     android:layout_marginRight="5dp"
-                    android:text="CP 50260"
+                    android:text="@string/cp_50260"
                     android:textColor="@color/black"
                     android:textSize="10dp" />
 
@@ -152,7 +152,7 @@
                 <com.google.android.material.textview.MaterialTextView
                     android:layout_width="60dp"
                     android:layout_height="wrap_content"
-                    android:text="Envío gratis"
+                    android:text="@string/env_o_gratis"
                     android:textColor="@color/green_light"
                     android:textSize="12sp" />
 
@@ -160,7 +160,7 @@
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"
                     android:background="@color/white"
-                    android:text="en millones de productos desde $299"
+                    android:text="@string/en_millones_de_productos_desde_299"
                     android:textColor="@color/black"
                     android:textSize="12sp" />
             </LinearLayout>
@@ -184,7 +184,7 @@
                     android:layout_marginLeft="6dp"
                     android:layout_weight="1"
                     android:gravity="start|center_vertical"
-                    android:text="Consigue envios gratis desde $149 con"
+                    android:text="@string/consigue_envios_gratis_desde_149_con"
                     android:textColor="@color/white"
                     android:textSize="12sp" />
 
@@ -346,13 +346,13 @@
             android:background="@drawable/cuadradoborder"
             android:orientation="vertical">
 
-            <com.google.android.material.textview.MaterialTextView
+            <TextView
                 android:id="@+id/lastText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="10dp"
-                android:text="Inspirado en lo ultimo que viste"
+                android:text="@string/inspirado_en_lo_ultimo_que_viste"
                 android:textSize="13dp"
                 android:textStyle="bold" />
 
@@ -390,14 +390,14 @@
                     <com.google.android.material.textview.MaterialTextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Kit de Actualizacion Gamer Ryzen 5 600g + Motherboard A520m"
+                        android:text="@string/kit_de_actualizacion_gamer_ryzen_5_600g_motherboard_a520m"
                         android:textStyle="bold" />
 
                     <com.google.android.material.textview.MaterialTextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="2dp"
-                        android:text="$ 3,759"
+                        android:text="@string/_3_759"
                         android:textSize="20dp"
                         android:textStyle="bold" />
 
@@ -405,7 +405,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="2dp"
-                        android:text="24x $227"
+                        android:text="@string/_24x_227"
                         android:textColor="@color/green_light"
                         android:textSize="12dp"
                         android:textStyle="bold" />
@@ -414,7 +414,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="2dp"
-                        android:text="Envio gratis"
+                        android:text="@string/envio_gratis"
                         android:textColor="@color/green_light"
                         android:textStyle="bold" />
                 </LinearLayout>
