--- a/app/src/main/res/layout/activity_oferts.xml
+++ b/app/src/main/res/layout/activity_oferts.xml
@@ -35,7 +35,7 @@
                     android:background="@drawable/arrowleft"
                     android:layout_marginRight="10dp"/>
 
-                <com.google.android.material.textview.MaterialTextView
+                <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -48,14 +48,14 @@
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:layout_marginLeft="15dp"
-                    android:background="@drawable/glasslight"
-                    android:onClick="cartView" />
+                    android:background="@drawable/glasslight"/>
+
                 <ImageButton
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:layout_marginLeft="15dp"
                     android:background="@drawable/systemuiconscart"
-                    android:onClick="cartView" />
+                    android:onClick="cartViewbutton" />
             </LinearLayout>
         </LinearLayout>
 
@@ -100,7 +100,7 @@
         app:layout_constraintTop_toBottomOf="@+id/navbar"
         tools:layout_editor_absoluteX="40dp">
 
-        <com.google.android.material.textview.MaterialTextView
+        <TextView
             android:layout_width="225dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -115,7 +115,7 @@
             android:layout_weight="1"
             android:orientation="horizontal">
 
-            <com.google.android.material.textview.MaterialTextView
+            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -233,7 +233,7 @@
                             android:layout_width="150dp"
                             android:layout_height="150dp"
                             android:padding="10dp"
-                            android:src="@drawable/talad"/>
+                            android:src="@drawable/crema"/>
                         <com.google.android.material.textview.MaterialTextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
@@ -247,7 +247,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="5dp"
-                            android:text="$1,000"
+                            android:text="$500"
                             android:textStyle="bold"
                             android:layout_marginLeft="4dp"
                             android:textColor="@color/textgray"
@@ -259,13 +259,13 @@
                             <com.google.android.material.textview.MaterialTextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="$ 446"
+                                android:text="$ 250"
                                 android:textSize="20dp"/>
                             <com.google.android.material.textview.MaterialTextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginLeft="4dp"
-                                android:text="59% OFF"
+                                android:text="50% OFF"
                                 android:textColor="@color/green_light"/>
                         </LinearLayout>
                         <com.google.android.material.textview.MaterialTextView
@@ -291,7 +291,7 @@
                             android:layout_width="150dp"
                             android:layout_height="150dp"
                             android:padding="10dp"
-                            android:src="@drawable/talad"/>
+                            android:src="@drawable/tv"/>
                         <com.google.android.material.textview.MaterialTextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
@@ -305,7 +305,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="5dp"
-                            android:text="$1,000"
+                            android:text="$10,000"
                             android:textStyle="bold"
                             android:layout_marginLeft="4dp"
                             android:textColor="@color/textgray"
@@ -317,13 +317,13 @@
                             <com.google.android.material.textview.MaterialTextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="$ 446"
+                                android:text="$ 8,000"
                                 android:textSize="20dp"/>
                             <com.google.android.material.textview.MaterialTextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginLeft="4dp"
-                                android:text="59% OFF"
+                                android:text="20% OFF"
                                 android:textColor="@color/green_light"/>
                         </LinearLayout>
                         <com.google.android.material.textview.MaterialTextView
@@ -344,7 +344,7 @@
                             android:layout_width="150dp"
                             android:layout_height="150dp"
                             android:padding="10dp"
-                            android:src="@drawable/talad"/>
+                            android:src="@drawable/phone"/>
                         <com.google.android.material.textview.MaterialTextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
@@ -358,7 +358,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="5dp"
-                            android:text="$1,000"
+                            android:text="$3,000"
                             android:textStyle="bold"
                             android:layout_marginLeft="4dp"
                             android:textColor="@color/textgray"
@@ -370,13 +370,13 @@
                             <com.google.android.material.textview.MaterialTextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="$ 446"
+                                android:text="$ 2100"
                                 android:textSize="20dp"/>
                             <com.google.android.material.textview.MaterialTextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginLeft="4dp"
-                                android:text="59% OFF"
+                                android:text="20% OFF"
                                 android:textColor="@color/green_light"/>
                         </LinearLayout>
                         <com.google.android.material.textview.MaterialTextView
@@ -402,7 +402,7 @@
                             android:layout_width="150dp"
                             android:layout_height="150dp"
                             android:padding="10dp"
-                            android:src="@drawable/talad"/>
+                            android:src="@drawable/heands"/>
                         <com.google.android.material.textview.MaterialTextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
@@ -416,7 +416,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="5dp"
-                            android:text="$1,000"
+                            android:text="$100"
                             android:textStyle="bold"
                             android:layout_marginLeft="4dp"
                             android:textColor="@color/textgray"
@@ -428,13 +428,13 @@
                             <com.google.android.material.textview.MaterialTextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="$ 446"
+                                android:text="$ 70"
                                 android:textSize="20dp"/>
                             <com.google.android.material.textview.MaterialTextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginLeft="4dp"
-                                android:text="59% OFF"
+                                android:text="30% OFF"
                                 android:textColor="@color/green_light"/>
                         </LinearLayout>
                         <com.google.android.material.textview.MaterialTextView
